Refactor amulet system and fix some bugs 重构护符系统并修复部分问题 (#3597)
* fix: /playsound crashes client

* fix: /playsound crashes client

* fix: over limit container capacity limit

* refactor(amulet): refactor amulet system

* fix(screen): fix parts of screens

* fix(screen): fix parts of screens

* fix: incorrect translation key

---------

Co-authored-by: ZhuRuoLing <jkl-963@live.com>